# dotfiles

./: .gitignore  AGENTS.md  GIT_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  OPENCODE_INTEGRATION.md  README.md  backup-dotfiles.py  backup-dotfiles.sh  cleanup-symlinks.py  restore-dotfiles.py  restore-dotfiles.sh
bash/: .bash_functions  .bashrc
brew/: Brewfile
docs/: INDEX.md  MULTIPLATFORM_GUIDE.md  SETUP_GUIDE.md  UNIFICATION_COMPLETE.md
fish/.config/fish/: config.fish
fish/.config/fish/functions/: y.fish  (+18 more)
fish/.config/fish/templates/python/: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
fish/.config/fish/templates/python/src/{PROJECT_NAME_KEBAB}/: __init__.py  main.py
fish/.config/fish/templates/python/tests/: test_main.py
ghostty/: .stow-local-ignore
ghostty/scripts/: ghostty-tmux.sh
neovim/: .stow-local-ignore
neovim/.config/nvim/: init.lua  lazy-lock.arch.json  lazy-lock.darwin.json  lazy-lock.json  lazyvim.json
nushell/.config/nushell/: config.nu  env.nu
opencode/: README.md
opencode/.config/opencode/: .env.example  opencode.json  package.json
scripts/: detect-env.fish  detect-env.sh  detect_env.py  init-nvim-lockfile.sh  load-starship-config.fish  load-starship-config.sh
shared/: fabric_aliases.sh  go_env.fish  go_env.nu  go_env.sh  go_env_arch.fish  secure_env.fish  secure_env.sh
starship/: .stowignore  starship.darwin.toml  starship.toml
tests/: test_detect_env.py  test_integration.py
tmux/: .tmux.conf
vscodium/: danielito.code-profile  default.code-profile
wezterm/: .wezterm.lua
zsh/: .zshrc
(+32 files in other folders)
