[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{PROJECT_NAME_KEBAB}"
version = "0.1.0"
description = "A Python project"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "{LICENSE_TYPE}"}
authors = [
    {name = "{AUTHOR}"}
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.0",
    "build>=0.10",
    "twine>=4.0",
]

[tool.setuptools]
packages = ["src.{PROJECT_NAME_KEBAB}"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src/{PROJECT_NAME_KEBAB} --cov-report=term-missing"
